src/test/ui/borrowck/mut-borrow-of-mut-ref.nll.stderr
error[E0596]: cannot borrow immutable item `b` as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:18:7
   |
LL |     g(&mut b) //~ ERROR cannot borrow
   |       ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
